--- a/training_flutter_theme_animation_6/pubspec.yaml
+++ b/training_flutter_theme_animation_6/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   intl: ^0.16.0
   sqflite: any
   path_provider: ^1.4.0
+  flare_flutter: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,7 +52,8 @@ flutter:
     - images/sample.jpg
     - images/no_image_selected.png
     - data/posts.db
-  #  - images/a_dot_ham.jpeg
+    - nodata.flr
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
