--- a/training_flutter_graphql_7/pubspec.yaml
+++ b/training_flutter_graphql_7/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flare_flutter: any
   graphql_flutter: any
   http: any
+  slugify: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
